--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "@loopback/service-proxy": "^3.0.7",
     "dotenv": "^8.2.0",
     "loopback-connector-postgresql": "^5.0.1",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "wkx": "^0.5.0"
   },
   "devDependencies": {
     "@loopback/build": "^6.2.9",
